# luaMatrix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults
assets/: display.lua
components/wifi_config/: CMakeLists.txt  README.md  captive_portal.c  captive_portal.h  dns_server.c  dns_server.h  http_server.c  http_server.h  index.html
include/: display.h  http_server.h  local_lua.h  luafuncs.h  luamatrix_mqtt.h
main/: CMakeLists.txt  display.cpp  idf_component.yml  local_lua.c  luafuncs.c  luamatrix.c  mgmt_http_server.c  mqtt_client.c
main/templates/: edit.html  firmware.html  logout.html  mgmt_index.html  reboot.html
